manifests/network-policies/allow-nginx-ingress-from-netshoot.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress-from-netshoot
  namespace: sre-lab

spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: netshoot

      ports:
        - protocol: TCP
          port: 80
