manifests/network-policies/allow-redis-client-egress-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-client-egress-to-redis
  namespace: sre-lab

spec:
  podSelector:
    matchLabels:
      app: redis-client
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis

      ports:
        - protocol: TCP
          port: 6379
