manifests/network-policies/allow-redis-ingress-from-redis-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress-from-redis-client
  namespace: sre-lab

spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: redis-client

      ports:
        - protocol: TCP
          port: 6379
